<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bryan.dingmantest2.AddActivity">

    <TextView
        android:id="@+id/tv_AddTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/AddTitle" />

    <EditText
        android:id="@+id/tb_AddName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tb_AddGPA"
        android:layout_alignStart="@+id/tb_AddGPA"
        android:layout_below="@+id/tv_AddTitle"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hint_Name"/>

    <EditText
        android:id="@+id/tb_AddEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tb_AddName"
        android:layout_alignStart="@+id/tb_AddName"
        android:layout_below="@+id/tb_AddName"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_Email"/>

    <EditText
        android:id="@+id/tb_AddMajor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tb_AddEmail"
        android:layout_alignStart="@+id/tb_AddEmail"
        android:layout_below="@+id/tb_AddEmail"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hint_Major"/>

    <EditText
        android:id="@+id/tb_AddGPA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tb_AddMajor"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/hint_GPA"/>

    <Button
        android:id="@+id/btn_AddRecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tb_AddGPA"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:text="@string/btn_AddRecord" />

    <Button
        android:id="@+id/btn_GoBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="13dp"
        android:text="@string/btn_GoBack"
        android:onClick="goBack"/>

</RelativeLayout>
