<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bryan.dingmantest2.DeleteActivity">

    <TextView
        android:id="@+id/tv_DeleteTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/DeleteTitle" />

    <Spinner
        android:id="@+id/cb_Entries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_DeleteTitle"
        android:layout_marginTop="26dp" />

    <Button
        android:id="@+id/btn_DeleteRecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cb_Entries"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/btn_DeleteRecord" />

    <Button
        android:id="@+id/btn_GoBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:text="@string/btn_GoBack"
        android:onClick="goBack"/>
</RelativeLayout>
