<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bryan.dingmantest2.UpdateActivity">

    <TextView
        android:id="@+id/tv_UpdateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:text="@string/UpdateTitle" />

    <EditText
        android:id="@+id/tb_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_UpdateTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="text|textPersonName" />

    <Button
        android:id="@+id/btn_Find"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tb_Name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/btn_Find" />

    <Spinner
        android:id="@+id/cb_Returns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btn_Find"
        android:layout_marginTop="22dp" />

    <EditText
        android:id="@+id/tb_EditName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tb_EditGPA"
        android:layout_alignStart="@+id/tb_EditGPA"
        android:layout_below="@+id/btn_Find"
        android:layout_marginTop="74dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/tb_EditEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tb_EditName"
        android:layout_alignStart="@+id/tb_EditName"
        android:layout_below="@+id/tb_EditName"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/tb_EditMajor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tb_EditEmail"
        android:layout_alignStart="@+id/tb_EditEmail"
        android:layout_below="@+id/tb_EditEmail"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/tb_EditGPA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tb_EditMajor"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/btn_UpdateRecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tb_EditGPA"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/btn_UpdateRecord" />

    <Button
        android:id="@+id/btn_GoBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="13dp"
        android:text="@string/btn_GoBack"
        android:onClick="goBack"/>

</RelativeLayout>
